--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Видео фон в круге -->
+  <div class="video-bg" id="videoBg">
+    <video id="bgVideo" autoplay muted loop playsinline>
+      <source src="stalker-fog.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+  </div>
+
+  <!-- Музыка -->
+  <audio id="bgMusic" loop>
+    <source src="stalker-music.mp3" type="audio/mpeg">
+  </audio>
+
+  <!-- Контейнер теста -->
   <div class="container">
     <h1>Психологический тест</h1>
 
@@ -30,6 +44,14 @@
     </div>
 
     <pre id="result">Результат анализа появится здесь...</pre>
+
+    <!-- Управление фоном и музыкой -->
+    <div class="controls">
+      <button id="toggleVideoBtn">Отключить фон</button>
+      <button id="toggleMusicBtn">Включить музыку</button>
+      <label for="volumeControl">Громкость: </label>
+      <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5">
+    </div>
   </div>
 
   <script src="script.js"></script>
