--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Музыка -->
   <div class="music-control">
     <label for="volumeControl">Громкость:</label>
-    <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.25">
+    <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.025">
   </div>
   <audio id="bgMusic" loop>
     <source src="stalker-music.mp3" type="audio/mpeg">
@@ -44,6 +44,20 @@
 
     <pre id="result">Результат анализа появится здесь...</pre>
   </div>
+
+  <!-- 🔥 ПОДВАЛ -->
+  <footer class="footer">
+    <p>
+      Контакты для связи: 
+      <a href="mailto:p.s.i.h.o_t.e.s.t@bk.ru">p.s.i.h.o_t.e.s.t@bk.ru</a>
+    </p>
+    <p>
+      Все материалы защищены. Копирование и распространение без разрешения запрещено.
+    </p>
+    <p>
+      © P.S.I.H.O.T.E.S.T, 2025
+    </p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
