--- a/index.html
+++ b/index.html
@@ -45,18 +45,11 @@
     <pre id="result">Результат анализа появится здесь...</pre>
   </div>
 
-  <!-- 🔥 ПОДВАЛ -->
+  <!-- 📌 ПОДВАЛ -->
   <footer class="footer">
-    <p>
-      Контакты для связи: 
-      <a href="mailto:p.s.i.h.o_t.e.s.t@bk.ru">p.s.i.h.o_t.e.s.t@bk.ru</a>
-    </p>
-    <p>
-      Все материалы защищены. Копирование и распространение без разрешения запрещено.
-    </p>
-    <p>
-      © P.S.I.H.O.T.E.S.T, 2025
-    </p>
+    <p>Контакты для связи: <a href="mailto:p.s.i.h.o_t.e.s.t@bk.ru">p.s.i.h.o_t.e.s.t@bk.ru</a></p>
+    <p>Все материалы защищены. Копирование и распространение запрещено.</p>
+    <p>© P.S.I.H.O.T.E.S.T, 2025</p>
   </footer>
 
   <script src="script.js"></script>
