--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <pre id="result">Результат анализа появится здесь...</pre>
   </div>
 
-  <!-- ПОДВАЛ -->
+  <!-- Футер -->
   <footer class="footer">
     <p>Контакты для связи: <a href="mailto:p.s.i.h.o_t.e.s.t@bk.ru">p.s.i.h.o_t.e.s.t@bk.ru</a></p>
     <p>Все материалы защищены. Копирование и распространение запрещено.</p>
