--- a/index.html
+++ b/index.html
@@ -19,22 +19,252 @@
     <h1>П.С.И.Х.О.Л.О.Г.И.Ч.Е.С.К.И.Й&nbsp;Т.Е.С.Т</h1>
 
     <div class="question" data-id="1">
-      <label>1. Как вы обычно общаетесь с друзьями?</label>
+      <label>1. Вам тяжело видеть, что кто-то страдает?</label>
       <textarea></textarea>
     </div>
 
     <div class="question" data-id="2">
-      <label>2. Как вы реагируете на критику?</label>
+      <label>2. Вы сопереживаете людям, когда они рассказывают о своих проблемах?</label>
       <textarea></textarea>
     </div>
 
     <div class="question" data-id="3">
-      <label>3. Как вы проводите свободное время?</label>
+      <label>3. Вас легко трогают истории из жизни других людей?</label>
       <textarea></textarea>
     </div>
 
     <div class="question" data-id="4">
-      <label>3. Как вы сесете свободное время?</label>
+      <label>4. Вы стараетесь помогать людям, даже если это для вас неудобно?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="5">
+      <label>5. Вам трудно оставаться равнодушным к несправедливости?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="6">
+      <label>6. Вы часто замечаете изменения настроения у окружающих?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="7">
+      <label>7. Вы искренне радуетесь успехам друзей так же, как собственным?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="8">
+      <label>8. Вас радует, когда другие люди счастливы?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="9">
+      <label>9. Вы обычно замечаете мелкие изменения в поведении других людей?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="10">
+      <label>10. Считаете ли вы себя чутким человеком?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="11">
+      <label>11. Как вы реагируете, если близкий человек скрывает свои чувства?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="12">
+      <label>12. Как вы помогаете друзьям или коллегам, когда они в трудной ситуации?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="13">
+      <label>13. Оцените по шкале 1–5: «Мне легко понять настроение других людей».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="14">
+      <label>14. Как вы справляетесь с чужой агрессией или раздражением?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="15">
+      <label>15. Вы чувствуете эмоциональную нагрузку, когда кто-то рядом переживает стресс?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="16">
+      <label>16. Вам сложно абстрагироваться от чужих проблем, чтобы сосредоточиться на себе?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="17">
+      <label>17. Оцените: «Я могу сохранять спокойствие, даже если рядом кто-то сильно переживает».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="18">
+      <label>18. Вы часто беспокоитесь о будущем?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="19">
+      <label>19. Легко волнуетесь из-за мелочей?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="20">
+      <label>20. Вас тревожат проблемы даже ночью?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="21">
+      <label>21. Страх, что вы не справитесь с трудностями, бывает у вас часто?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="22">
+      <label>22. Вам трудно успокоиться после конфликта или ссоры?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="23">
+      <label>23. Иногда вы думаете, что с вами что-то не так?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="24">
+      <label>24. Вас беспокоит мнение окружающих о вас?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="25">
+      <label>25. Вам сложно сосредоточиться, когда вы нервничаете?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="26">
+      <label>26. Вы часто испытываете необъяснимую тревогу?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="27">
+      <label>27. Избегаете ситуаций, вызывающих у вас тревогу?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="28">
+      <label>28. Как вы справляетесь с длительным стрессом?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="29">
+      <label>29. Оцените: «Я могу контролировать свои эмоции в сложной ситуации».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="30">
+      <label>30. Как вы реагируете на критику в учебе или работе?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="31">
+      <label>31. Насколько часто стресс мешает вашим действиям?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="32">
+      <label>32. Оцените: «Я умею расслабляться после сильного напряжения».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="33">
+      <label>33. Вам сложно концентрироваться при эмоциональном напряжении?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="34">
+      <label>34. Оцените: «Я могу сохранять продуктивность в условиях давления».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="35">
+      <label>35. Вы довольны своими способностями и качествами?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="36">
+      <label>36. Вам легко принимать комплименты?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="37">
+      <label>37. Вы чувствуете, что заслуживаете уважения окружающих?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="38">
+      <label>38. Иногда вы думаете, что другие люди лучше вас?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="39">
+      <label>39. Вы часто критикуете себя за незначительные ошибки?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="40">
+      <label>40. Вы уверены в себе при знакомстве с новыми людьми?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="41">
+      <label>41. Считаете, что заслуживаете быть счастливым?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="42">
+      <label>42. Вам сложно мириться с личными неудачами?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="43">
+      <label>43. Можете признать свои достижения и гордиться ими?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="44">
+      <label>44. Вы часто сомневаетесь в своих решениях?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="45">
+      <label>45. Как вы реагируете на публичное внимание или похвалу?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="46">
+      <label>46. Оцените: «Я умею принимать свои ошибки без сильного самоосуждения».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="47">
+      <label>47. Насколько легко вам доверять себе в принятии решений?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="48">
+      <label>48. Оцените: «Я способен мотивировать себя для выполнения сложных задач».</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="49">
+      <label>49. Вы считаете себя способным справиться с жизненными трудностями?</label>
+      <textarea></textarea>
+    </div>
+
+    <div class="question" data-id="50">
+      <label>50. Оцените: «Я могу сохранять позитивное отношение к себе, даже если что-то не получается».</label>
       <textarea></textarea>
     </div>
 
