--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Психологический тест</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="Iconka.ico">
   <script src="https://cdn.jsdelivr.net/npm/docx@7.3.0/build/index.js"></script>
 </head>
 <body>
